--- a/section-02/.babelrc
+++ b/section-02/.babelrc
@@ -15,6 +15,7 @@
         "@models": "./server/models",
         "@routes": "./server/routes",
         "@config": "./server/config",
+        "@tests": "./__tests__/",
         "@validators": "./server/validators",
         "@components": "./client/components",
         "@middleware": "./server/middleware",
