--- a/section-02/package.json
+++ b/section-02/package.json
@@ -9,7 +9,8 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "webpack --production",
     "start": "node dist/index.js",
-    "test": "jest"
+    "test": "jest",
+    "test:e2e": "cypress open"
   },
   "dependencies": {
     "@fullstackjs/mail": "^1.0.7",
@@ -52,6 +53,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-module-resolver": "^3.2.0",
     "css-loader": "^2.1.1",
+    "cypress": "^4.5.0",
     "glob-all": "^3.1.0",
     "jest": "^25.5.3",
     "mini-css-extract-plugin": "^0.5.0",
@@ -61,6 +63,7 @@
     "postcss-loader": "^3.0.0",
     "purgecss-webpack-plugin": "^1.4.0",
     "redux-devtools-extension": "^2.13.8",
+    "supertest": "^4.0.2",
     "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.3.0",
